--- a/002_resumo.html
+++ b/002_resumo.html
@@ -30,7 +30,7 @@
     <footer>
     <nav>
         <ul class="res_cx_botoes">
-            <a href="index_001.html"><li class="bt_voltar"><h3>VOLTAR</h3></li></a>
+            <a href="index.html"><li class="bt_voltar"><h3>VOLTAR</h3></li></a>
             <li class="bt_espaco"><h5>......</h5></li>
             <a href="003_abstract.html"><li class="bt_avancar"><h3>AVANÇAR</h3></li></a>
         </ul>
