--- a/009_capa.html
+++ b/009_capa.html
@@ -29,7 +29,7 @@
         <h4>A logomarca foi extraída e utilizada de acordo com o manual de identidade visual, publicado pela Coordenadoria de Marketing e Eventos,  do SENAI São Paulo.</h4>
         <h4>Este trabalho foi produzido em editor de código fonte, gratuito e de código aberto, mas sob licença proprietária.</h4>
     </div>
-    <a href="index_001.html"><nav class="ind_bt_proximo"><h3>INÍCIO</h3></nav></a>
+    <a href="index.html"><nav class="ind_bt_proximo"><h3>INÍCIO</h3></nav></a>
     <div class="espaco_v">
         <h5>...</h5>
     </div>        
